update style of home page

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,3 +1,13 @@
-<div>
-    <h1 class="sample-content">home Here</h1>
+<div class="main">
+    <div class="left-panel">
+        <gm-menu></gm-menu>
+    </div>
+    <div class="right-panel">
+        <gm-newest></gm-newest>
+        <gm-newest></gm-newest>
+        <gm-newest></gm-newest>
+        <gm-newest></gm-newest>
+        <gm-newest></gm-newest>
+        <gm-newest></gm-newest>
+    </div>
 </div>
