--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -1,9 +1,16 @@
 <header>
-    <h1>党群管理系统</h1>
-    <div class="menus">
-        <span>张三</span>
-        <span>8</span>
-        <a href="#">注销</a>
+    <div class="content">
+        <div class="logo">
+            <img src="assets/img/city.svg">
+        </div>
+        <h1 class="caption">党群管理系统</h1>
+        <div class="menus">
+            <span class="c-li fa fa-user-circle">张三</span>
+            <span class="c-li fa fa-bell-o msg-bell">
+                <div class="msg">8</div>
+            </span>
+            <a class="c-li" href="#">注销</a>
+        </div>
     </div>
 </header>
 
