--- a/frontend/src/app/shared/components/menu/menu.component.html
+++ b/frontend/src/app/shared/components/menu/menu.component.html
@@ -1,9 +1,5 @@
 <div class="menu">
-    <div class="cell-bar">菜单1</div>
-    <div class="cell-bar">菜单2</div>
-    <div class="cell-bar">菜单3</div>
-    <div class="cell-bar">菜单4</div>
-    <div class="cell-bar">菜单5</div>
-    <div class="cell-bar">菜单6</div>
-    <div class="cell-bar">菜单7</div>
+    <div class="cell-bar" *ngFor="let option of data">
+        <gm-menu-option [data]="option"></gm-menu-option>
+    </div>
 </div>
