--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -1,7 +1,6 @@
-/* this file will be extracted to main dist folder and is imported in index.html */
-/* This file is for setting global styles  */
-@import 'lib';
+@import "../../node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import "../assets/css/font-awesome-4.7.0/scss/font-awesome";
+@import 'lib';
 
 html, body {
   margin: 0;
@@ -12,8 +11,10 @@ html, body {
   font-family: Arial, Helvetica, sans-serif
 }
 
-body {
+.router-panel {
   display: flex;
+  align-items: center;
+  background-color: $app-default-gray;
 }
 
 nav {
