add table for list page

--- a/frontend/src/app/shared/components/table/table.component.html
+++ b/frontend/src/app/shared/components/table/table.component.html
@@ -1,3 +1,74 @@
-<p>
-  table works!
-</p>
+<div class="data-panel">
+    <div class="header">
+        <span>姓名</span>
+        <span>社区</span>
+        <span>是否户主</span>
+        <span>住户性质</span>
+        <span>性别</span>
+        <span>年龄</span>
+        <span>民族</span>
+        <span>操作</span>
+    </div>
+    <div class="body">
+        <div class="data-item">
+            <span>张三</span>
+            <span>回民社区</span>
+            <span>是</span>
+            <span>常住</span>
+            <span>男</span>
+            <span>30</span>
+            <span>汉</span>
+            <span>
+                <button>删除</button>
+            </span>
+        </div>
+        <div class="data-item">
+            <span>张三</span>
+            <span>回民社区</span>
+            <span>是</span>
+            <span>常住</span>
+            <span>男</span>
+            <span>30</span>
+            <span>汉</span>
+            <span>
+                <button>删除</button>
+            </span>
+        </div>
+        <div class="data-item">
+            <span>张三</span>
+            <span>回民社区</span>
+            <span>是</span>
+            <span>常住</span>
+            <span>男</span>
+            <span>30</span>
+            <span>汉</span>
+           <span>
+                <button>删除</button>
+            </span>
+        </div>
+        <div class="data-item">
+            <span>张三</span>
+            <span>回民社区</span>
+            <span>是</span>
+            <span>常住</span>
+            <span>男</span>
+            <span>30</span>
+            <span>汉</span>
+            <span>
+                <button>删除</button>
+            </span>
+        </div>
+        <div class="data-item">
+            <span>张三</span>
+            <span>回民社区</span>
+            <span>是</span>
+            <span>常住</span>
+            <span>男</span>
+            <span>30</span>
+            <span>汉</span>
+            <span>
+                <button>删除</button>
+            </span>
+        </div>
+    </div>
+</div>
