--- a/frontend/src/app/data-entry/population/population.component.html
+++ b/frontend/src/app/data-entry/population/population.component.html
@@ -1,8 +1,9 @@
-<div class="main">
-    <div class="left-panel">
-        <gm-menu></gm-menu>
-    </div>
-    <div class="right-panel">
-        <gm-table></gm-table>
-    </div>
+<header>
+    <h3>人口信息列表</h3>
+    <button>创建信息表</button>
+</header>
+<div class="search-panel">
+    <gm-search-bar></gm-search-bar>
 </div>
+<gm-table></gm-table>
+
