--- a/frontend/src/app/shared/components/header/header.component.scss
+++ b/frontend/src/app/shared/components/header/header.component.scss
@@ -13,8 +13,8 @@ header {
 
     .content {
         width: 100%;
-        max-width: $app-width;
         margin: 0 auto;
+        padding:0 50px;
         display: flex;
         align-items: center;
         flex: 1;
