--- a/frontend/src/app/shared/components/table/table.component.scss
+++ b/frontend/src/app/shared/components/table/table.component.scss
@@ -2,20 +2,44 @@
   display: flex;
 }
 
+.header, .body {
+  font-size: 14px;;
+}
+
 .header {
+  background: #e1e1e1;
+  padding: 5px 0;
+
   >span {
     flex: 1;
     text-align: center;
+    color: #555;
   }
 }
 
 .body {
   .data-item {
     display: flex;
+    align-items: center;
+    line-height: 2;
+
+    &:nth-child(2n) {
+      background: #f8f8f8;
+    }
 
     >span, button {
       flex: 1;
       text-align: center;
+    }
+
+    button {
+      background-color: #aa4a24;
+      border: 0;
+      border-radius: 5px;
+      color: #FFF;
+      font-size: 12px;
+      cursor: pointer;
+      padding: 0 10px;
     }
   }
 }
