--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -11,6 +11,10 @@ html, body {
   font-family: Arial, Helvetica, sans-serif
 }
 
+body {
+    display: flex;
+}
+
 .router-panel {
   display: flex;
   align-items: center;
