--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<gm-header *ngIf="isLogged"></gm-header>
+<gm-header *ngIf="isLoggedIn"></gm-header>
 <main>
     <router-outlet></router-outlet>
 </main>
