--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -1,5 +1,9 @@
 @import "../../node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import "../assets/css/font-awesome-4.7.0/scss/font-awesome";
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
+@import '~bootstrap/scss/mixins';
+@import '~ngx-toastr/toastr-bs4-alert';
 @import 'lib';
 
 html, body {
