add settings module

--- a/frontend/src/app/shared/components/menu/menu.component.scss
+++ b/frontend/src/app/shared/components/menu/menu.component.scss
@@ -6,7 +6,7 @@
 
 .menu {
   min-width: 160px;
-  background: #2C3E50;
+  background: rgba(44, 62, 80, 0.9);
   color: #fff;
   font-size: $app-font-small;
   text-align: center;
