--- a/frontend/src/app/shared/components/table/table-header/table-header.component.scss
+++ b/frontend/src/app/shared/components/table/table-header/table-header.component.scss
@@ -1,3 +1,22 @@
 :host {
     background: #e1e1e1;
 }
+
+.header {
+  display: flex;
+}
+
+.header, .body {
+  font-size: 14px;;
+}
+
+.header {
+  background: #e1e1e1;
+  padding: 5px 0;
+
+  >span {
+    flex: 1;
+    text-align: center;
+    color: #555;
+  }
+}
