update settings module

--- a/frontend/src/app/settings/user-manager/create/create.component.html
+++ b/frontend/src/app/settings/user-manager/create/create.component.html
@@ -1,6 +1,9 @@
 <form *ngIf="!isSubmitting" [formGroup]="formGroup" (ngSubmit)="submit()" novalidate>
   <div class="form-group">
-    <input type="text" class="form-control" id="userName" placeholder="user name" formControlName="userName" caValidityClass required/>
+    <div class="wrapper">
+      <label>登录账号</label>
+      <input type="text" class="form-control" id="userName" placeholder="user name" formControlName="userName" caValidityClass required/>
+    </div>
     <small *ngIf="formGroup.get('userName').hasError('pattern')" class="invalid-feedback">
       Invalid title.
     </small>
@@ -12,7 +15,10 @@
     </small>
   </div>
   <div class="form-group">
-    <input type="password" class="form-control" id="password" placeholder="password" formControlName="password" caValidityClass required/>
+    <div class="wrapper">
+      <label>登录密码</label>
+      <input type="password" class="form-control" id="password" placeholder="password" formControlName="password" caValidityClass required/>
+    </div>
     <small *ngIf="formGroup.get('password').hasError('pattern')" class="invalid-feedback">
       Invalid title.
     </small>
@@ -24,7 +30,27 @@
     </small>
   </div>
   <div class="form-group">
-    <input type="text" class="form-control" id="name" placeholder="name" formControlName="name" caValidityClass required/>
+    <div class="wrapper">
+      <label>用户名称</label>
+      <input type="text" class="form-control" id="name" placeholder="name" formControlName="name" caValidityClass required/>
+    </div>
+    <small *ngIf="formGroup.get('name').hasError('pattern')" class="invalid-feedback">
+      Invalid title.
+    </small>
+    <small *ngIf="formGroup.get('name').hasError('maxlength')" class="invalid-feedback">
+      Title cannot exceed {{ titleLengthLimit }} characters.
+    </small>
+    <small *ngIf="formGroup.get('name').dirty && formGroup.get('name').hasError('required')" class="invalid-feedback">
+      Required field.
+    </small>
+  </div>
+  <div class="form-group">
+    <div class="wrapper">
+      <label>所属社区</label>
+      <ca-select>
+        <ca-option></ca-option>
+      </ca-select>
+    </div>
     <small *ngIf="formGroup.get('name').hasError('pattern')" class="invalid-feedback">
       Invalid title.
     </small>
