--- a/frontend/src/app/settings/community-manager/community-manager.component.html
+++ b/frontend/src/app/settings/community-manager/community-manager.component.html
@@ -1,3 +1,14 @@
-<p>
-  community-manager works!
-</p>
+<header>
+  <h3>社区列表</h3>
+  <button (click)="openModal(communityManagerModal)">创建社区</button>
+</header>
+<div class="search-panel">
+  <gm-search-bar></gm-search-bar>
+</div>
+<gm-community-table [columns]="columns" [data]="communities"></gm-community-table>
+
+<ng-template #communityManagerModal let-close="close" let-dismiss="dismiss">
+  <gm-modal-container title="创建社区" [dismiss]="dismiss">
+    <gm-community-create [communities]="communities" [close]="close"></gm-community-create>
+  </gm-modal-container>
+</ng-template>
