--- a/frontend/src/app/shared/components/ca-select/option.component.scss
+++ b/frontend/src/app/shared/components/ca-select/option.component.scss
@@ -1,7 +1,7 @@
 @import "./select-lib";
 
 :host {
-    display: block;
+    display: flex;
     height: 36px;
 
     &[disabled] .option {
@@ -14,4 +14,5 @@
 .option {
     @include select-button;
     display: block;
+    flex: 1;
 }
