--- a/frontend/src/styles/_lib.scss
+++ b/frontend/src/styles/_lib.scss
@@ -8,3 +8,33 @@ a {
 app-login {
   margin: 0 auto;
 }
+
+%table-base {
+  .body {
+    .data-item {
+      display: flex;
+      align-items: center;
+      line-height: 2;
+
+      &:nth-child(2n) {
+        background: #f8f8f8;
+      }
+
+      >span, button {
+        flex: 1;
+        text-align: center;
+        font-size: 14px;
+      }
+
+      button {
+        background-color: #aa4a24;
+        border: 0;
+        border-radius: 5px;
+        color: #FFF;
+        font-size: 12px;
+        cursor: pointer;
+        padding: 0 10px;
+      }
+    }
+  }
+}
