--- a/frontend/src/app/settings/user-manager/create/create.component.html
+++ b/frontend/src/app/settings/user-manager/create/create.component.html
@@ -16,21 +16,6 @@
   </div>
   <div class="form-group">
     <div class="wrapper">
-      <label>登录密码</label>
-      <input type="password" class="form-control" id="password" placeholder="password" formControlName="password" caValidityClass required/>
-    </div>
-    <small *ngIf="formGroup.get('password').hasError('pattern')" class="invalid-feedback">
-      Invalid title.
-    </small>
-    <small *ngIf="formGroup.get('password').hasError('maxlength')" class="invalid-feedback">
-      Title cannot exceed {{ titleLengthLimit }} characters.
-    </small>
-    <small *ngIf="formGroup.get('password').dirty && formGroup.get('password').hasError('required')" class="invalid-feedback">
-      Required field.
-    </small>
-  </div>
-  <div class="form-group">
-    <div class="wrapper">
       <label>用户名称</label>
       <input type="text" class="form-control" id="name" placeholder="name" formControlName="name" caValidityClass required/>
     </div>
@@ -47,17 +32,13 @@
   <div class="form-group">
     <div class="wrapper">
       <label>所属社区</label>
-      <ca-select>
-        <ca-option></ca-option>
+      <ca-select formControlName="communityID">
+        <ng-container *ngFor="let community of communities">
+          <ca-option [value]="community.id">{{ community.name }}</ca-option>
+        </ng-container>
       </ca-select>
     </div>
-    <small *ngIf="formGroup.get('name').hasError('pattern')" class="invalid-feedback">
-      Invalid title.
-    </small>
-    <small *ngIf="formGroup.get('name').hasError('maxlength')" class="invalid-feedback">
-      Title cannot exceed {{ titleLengthLimit }} characters.
-    </small>
-    <small *ngIf="formGroup.get('name').dirty && formGroup.get('name').hasError('required')" class="invalid-feedback">
+    <small *ngIf="formGroup.get('communityID').dirty && formGroup.get('communityID').hasError('required')" class="invalid-feedback">
       Required field.
     </small>
   </div>
