--- a/frontend/src/app/settings/user-manager/user-manager.component.html
+++ b/frontend/src/app/settings/user-manager/user-manager.component.html
@@ -1,14 +1,14 @@
 <header>
-  <h3>用户列表</h3>
+  <span>用户列表</span>
   <button (click)="openModal(userManagerModal)">创建用户</button>
 </header>
 <div class="search-panel">
   <gm-search-bar></gm-search-bar>
 </div>
-<gm-table [columns]="columns"></gm-table>
+<gm-user-table [columns]="columns" [data]="userList"></gm-user-table>
 
 <ng-template #userManagerModal let-close="close" let-dismiss="dismiss">
   <gm-modal-container [dismiss]="dismiss">
-    <gm-user-create></gm-user-create>
+    <gm-user-create [communities]="communities" [close]="close"></gm-user-create>
   </gm-modal-container>
 </ng-template>
