--- a/frontend/src/app/settings/community-manager/community-manager.component.html
+++ b/frontend/src/app/settings/community-manager/community-manager.component.html
@@ -1,5 +1,5 @@
 <header>
-  <h3>社区列表</h3>
+  <span>社区列表</span>
   <button (click)="openModal(communityManagerModal)">创建社区</button>
 </header>
 <div class="search-panel">
