--- a/frontend/src/app/settings/role-manager/role-manager.component.html
+++ b/frontend/src/app/settings/role-manager/role-manager.component.html
@@ -1,5 +1,5 @@
 <header>
-  <h3>角色列表</h3>
+  <span>角色列表</span>
   <button (click)="openModal(roleManagerModal)">创建用户</button>
 </header>
 <div class="search-panel">
