--- a/frontend/src/app/settings/menus-manager/menu-table/menu-table.component.html
+++ b/frontend/src/app/settings/menus-manager/menu-table/menu-table.component.html
@@ -3,7 +3,7 @@
     <div class="body">
         <div class="data-item" *ngFor="let item of data">
             <span>{{ item?.name }}</span>
-            <span>{{ item?.parentID }}</span>
+            <span>{{ getMenuNameById(item?.parentID) }}</span>
             <span>{{ item?.menuType }}</span>
             <span>{{ item?.createdBy }}</span>
             <span>{{ item?.createdDate | date }}</span>
