--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
     <div class="content">
         <div class="logo">
-            <img src="assets/img/city.svg">
+            <img src="assets/img/iconfont/city.svg">
         </div>
         <h1 class="caption">党群管理系统</h1>
         <div class="menus">
