--- a/frontend/src/app/settings/menus-manager/menu-table/menu-table.component.html
+++ b/frontend/src/app/settings/menus-manager/menu-table/menu-table.component.html
@@ -9,7 +9,7 @@
             <span>{{ item?.createdDate | date }}</span>
             <span class="menus-panel">
               <button type="button" class="btn icon-delete" (click)="removeMenu(item?.id)"></button>
-              <button type="button" class="btn icon-edit" (click)="editMenu(item?.id)"></button>
+              <!--<button type="button" class="btn icon-edit" (click)="editMenu(item?.id)"></button>-->
             </span>
         </div>
     </div>
