--- a/frontend/src/app/settings/logs-manager/logs-manager.component.html
+++ b/frontend/src/app/settings/logs-manager/logs-manager.component.html
@@ -1,3 +1,7 @@
-<p>
-  logs-manager works!
-</p>
+<header>
+  <span>日志列表</span>
+</header>
+<div class="search-panel">
+  <gm-search-bar></gm-search-bar>
+</div>
+<gm-role-table [columns]="columns" [data]="roles"></gm-role-table>
