--- a/frontend/src/app/data-entry/population/population.component.html
+++ b/frontend/src/app/data-entry/population/population.component.html
@@ -5,10 +5,10 @@
 <div class="search-panel">
     <gm-search-bar></gm-search-bar>
 </div>
-<gm-table></gm-table>
+<gm-table [columns]="columns" [data]="populationList"></gm-table>
 
 <ng-template #populationModal let-close="close" let-dismiss="dismiss">
-    <gm-modal-container [dismiss]="dismiss">
+    <gm-modal-container [dismiss]="dismiss" [title]="'人口信息登记表'">
         <gm-population-editor></gm-population-editor>
     </gm-modal-container>
 </ng-template>
