--- a/frontend/src/app/data-entry/population/data-editor/data-editor.component.html
+++ b/frontend/src/app/data-entry/population/data-editor/data-editor.component.html
@@ -1,24 +1,57 @@
+<div class="form-info">
+  <dl>
+    <dt>社区</dt>
+    <dd>回民社区</dd>
+    <dt>登记人</dt>
+    <dd>张三</dd>
+    <dt>登记日期</dt>
+    <dd>2018/05/01</dd>
+  </dl>
+</div>
 <form *ngIf="!isSubmitting" [formGroup]="formGroup" (ngSubmit)="submit()" novalidate>
   <div class="form-group">
-    <input type="text" class="form-control" placeholder="家庭住址"  caValidityClass/>
+    <div class="wrapper">
+      <label>所属社区</label>
+      <ca-select formControlName="communityID">
+        <ca-option *ngFor="let community of communities" [value]="community.id">{{ community.name }}</ca-option>
+      </ca-select>
+    </div>
+    <small *ngIf="formGroup.get('communityID').dirty && formGroup.get('communityID').hasError('required')" class="invalid-feedback">
+      Required field.
+    </small>
   </div>
   <div class="form-group">
     <div class="wrap">
-      <label>
-        流动人口
-      </label>
-      <input type="radio" name="family_type">
+      <label>家庭住址</label>
+      <input type="text" class="form-control" placeholder="家庭住址"  caValidityClass/>
     </div>
+  </div>
+  <div class="form-group family-type">
     <div class="wrap">
-      <label>常住人口</label>
-      <input type="radio" name="family_type">
+      <label>住户性质</label>
+      <div class="inner-wrap">
+        <div class="wrap">
+          <input type="radio" name="family_type">
+          <label>流动人口</label>
+        </div>
+        <div class="wrap">
+          <input type="radio" name="family_type">
+          <label>常住人口</label>
+        </div>
+      </div>
     </div>
   </div>
   <div class="form-group">
-    <input type="text" class="form-control" placeholder="姓名"  caValidityClass/>
+    <div class="wrap">
+      <label>姓名</label>
+      <input type="text" class="form-control" placeholder="姓名"  caValidityClass/>
+    </div>
   </div>
   <div class="form-group">
-    <input type="text" class="form-control" placeholder="年龄"  caValidityClass/>
+    <div class="wrap">
+      <label>年龄</label>
+      <input type="text" class="form-control" placeholder="年龄"  caValidityClass/>
+    </div>
   </div>
   <div class="form-group">
     <ca-select formControlName="sex">
@@ -36,6 +69,11 @@
   </div>
   <div class="form-group">
     <input type="text" class="form-control" placeholder="联系电话"  caValidityClass/>
+  </div>
+  <div class="form-group">
+    <div class="wrap">
+      <ca-input-checkbox *ngFor="let item of insurancesFormArray" [formControl]="item.control" [value]="item.insurance.value">{{ item.insurance.name }}</ca-input-checkbox>
+    </div>
   </div>
   <div class="modal-buttons">
     <button type="submit" class="btn btn-primary">Save</button>
