--- a/frontend/src/app/data-entry/party-build/party-build.component.html
+++ b/frontend/src/app/data-entry/party-build/party-build.component.html
@@ -1,1 +1,16 @@
-<gm-table></gm-table>
+<header>
+  <h3>党建活动信息列表</h3>
+  <button (click)="openModal(partyBuildModal)">创建信息表</button>
+</header>
+<div class="search-panel">
+  <gm-search-bar></gm-search-bar>
+</div>
+<gm-table [columns]="columns" [data]="partyActivitiesList"></gm-table>
+
+<ng-template #partyBuildModal let-close="close" let-dismiss="dismiss">
+  <gm-modal-container [dismiss]="dismiss" [title]="'党建活动信息表'">
+    <gm-party-editor [communities]="communities" [close]="close"></gm-party-editor>
+  </gm-modal-container>
+</ng-template>
+
+
