--- a/frontend/src/app/data-entry/risk-checklist/risk-checklist.component.html
+++ b/frontend/src/app/data-entry/risk-checklist/risk-checklist.component.html
@@ -1,1 +1,16 @@
-<gm-table></gm-table>
+<header>
+  <h3>安全隐患排查列表</h3>
+  <button (click)="openModal(riskCheckModal)">创建安全隐患排查表</button>
+</header>
+<div class="search-panel">
+  <gm-search-bar></gm-search-bar>
+</div>
+<gm-table [columns]="columns"></gm-table>
+
+<ng-template #riskCheckModal let-close="close" let-dismiss="dismiss">
+  <gm-modal-container [dismiss]="dismiss" [title]="'安全隐患排查表'">
+    <gm-risk-editor></gm-risk-editor>
+  </gm-modal-container>
+</ng-template>
+
+
