--- a/frontend/src/app/data-entry/risk-checklist/risk-checklist.component.scss
+++ b/frontend/src/app/data-entry/risk-checklist/risk-checklist.component.scss
@@ -1,7 +1,25 @@
-.main {
-    display: flex;
+header {
+  display: flex;
+  padding: 5px 10px;
+  border-bottom: 1px solid #888;
+
+  h3 {
+    flex: 1;
+    color: #555;
+    margin: 0;
+  }
+
+  button {
+    background: #2e68aa;
+    color: #fff;
+    border-radius: 5px;
+    font-size: 14px;
+    padding: 0 20px;
+  }
 }
 
-.right-panel {
-    flex: 1;
+.search-panel {
+  display: flex;
+  flex-direction: row-reverse;
 }
+
