--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -15,5 +15,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    background: url("~/assets/img/bg/bg5.jpeg") center no-repeat;
+    background-size: cover;
   }
 }
