--- a/frontend/src/styles/shared/_variables.scss
+++ b/frontend/src/styles/shared/_variables.scss
@@ -36,4 +36,5 @@ $placeholder-color: #a3a4a5;
 $color-unread-marker: #9bf0ac;
 $gray-border: #e0e0e0;
 $workspace-tabs-backgroubnd: #2b2e30;
+$menu-width: 120px;
 
