--- a/frontend/src/app/shared/components/menu/menu-option/option.component.scss
+++ b/frontend/src/app/shared/components/menu/menu-option/option.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../../styles/lib";
+
 :host {
   display: block;
   padding: 20px 0;
@@ -9,7 +11,7 @@
 
   gm-menu-option {
     padding: 20px 0;
-    width: 160px;
+    width: $menu-width;
 
     &:hover {
       background: #17232f;
