--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -5,8 +5,9 @@
         </div>
         <h1 class="caption">党群管理系统</h1>
         <div class="menus">
-            <span class="c-li fa fa-user-circle">{{ data?.name }}</span>
-            <span class="c-li fa fa-bell-o msg-bell">
+            <span class="c-li"><fa-icon [icon]="faUserCircle"></fa-icon>{{ data?.name }}</span>
+            <span class="c-li msg-bell">
+                <fa-icon [icon]="faBell"></fa-icon>
                 <div class="msg">8</div>
             </span>
             <a class="c-li" href="javascript:void(0);" (click)="logout()">注销</a>
